
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-3 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Add validation to processors for Chunks, Plugins, Snippets, and Template Variables
- [#MODX-1998] Disallow reserved Template Variable names (i.e. Resource field names)
- [#MODX-2033] Fix bug with unchecking Template Variable access when editing a Template
- Have modX::switchContext() update placeholders from config on successful switch
- [#MODX-1774] Remove redundant setting of placeholders from modX::$config in modRequest::handleRequest()
- [#MODX-2031] Fix modX::stripTags() and modX::sanitize() to properly strip nested element tags
- [#MODX-2027] Added icon to file tree to show MODx Browser, for a different view on file management
- [#MODX-1924] Made more precise the cursor pointer change on buttons in mgr
- [#MODX-1904] Fixed bug with phx placeholders in modTranslate095 class
- [#MODX-1535] Fixed bug with transparent background for grid-based comboboxes
- [#MODX-1904] Fixed bug with phx placeholders in modParser095 class
- [#MODX-1936] Lexicons now fallback to English if no translation is found for specified language
- [#MODX-1781] Fixed z-index issue with top nav and window masks
- [#MODX-217] Added create element type icons for Element tree
- [#MODX-217] Added directory create icon to file tree toolbar, changed upload files button to icon
- [#MODX-2022] Fixed bug regarding php file permissions and writable checks
- Fixed bugs related to loading of RTEs for TVs in derivative resource classes
- Enhanced image TV to show preview of image, adjusted to display below
- [#MODX-2015] Added sanity check to prevent users from dragging Resources to a non-existent context
- [#MODX-2013] Fixed bug where hiding fields with Form Customization would disable them from being sent