@@ -66,9 +66,9 @@ foreach (new DirectoryIterator($fullpath) as $file) {
             'image_width' => $thumbWidth,
             'image_height' => $thumbHeight,
             'url' => str_replace('//','/',$modx->getOption('base_url').$url),
-            'relativeUrl' => $url,
+            'relativeUrl' => ltrim($url,'/'),
             'ext' => $fileExtension,
-            'pathname' => $filePathName,
+            'pathname' => str_replace('//','/',$filePathName),
             'lastmod' => $file->getMTime(),
             'disabled' => false,
             'perms' => $octalPerms,
